[vishal]Add: add profile feature for user
